# iot_dashboard

./: .gitignore  Procfile  README.md  pyproject.toml  requirement.txt  requirements.txt
.ebextensions/: 01_packages.config  django.config
AniM5Stack/: apps.py  consumers.py  models.py  routing.py  views.py
AniM5Stack/migrations/: 0001_initial.py  0002_auto_20220620_2116.py  0003_auto_20220624_0009.py
AniM5Stack/static/AniM5Stack/js/: sd_manager.js  ws_anim5stack.js
AniM5Stack/templates/AniM5Stack/: anim5_sdmanager.html
environment_monitor/: apps.py  consumers.py  models.py  routing.py  serializers.py  views.py
environment_monitor/migrations/: 0001_initial.py  0002_auto_20210704_1926.py  0003_device.py  0004_device_token.py
environment_monitor/static/environment_monitor/js/: control_enviroment_monitor.js  control_environment_monitor.js  dashboard_environment_monitor.js  environment_monitor.js  (+1 more)
environment_monitor/templates/environment_monitor/: environment_monitor_control.html  environment_monitor_home.html
home/: views.py
home/templates/home/: dashboard.html  devices.html  home.html
iot_dashboard/: asgi.py  constants.py  routing.py  settings.py  urls.py  wsgi.py
mytasks/: models.py  serializers.py  views.py
mytasks/templates/mytasks/: mytasks.html
sound_recorder/: apps.py  models.py  views.py
sound_recorder/migrations/: 0001_initial.py  0002_auto_20210502_1228.py
sound_recorder/static/css/: menu.css
sound_recorder/static/js/: sound_recorder.js
sound_recorder/templates/sound_recorder/: soundrecorder_home.html
static/css/: menu.css  notifications.css
static/js/: change_color.js  measurement_chart.js  menu.js  notifications.js
templates/: home.html  menu.html
(+4 files in other folders)
