[tool.poetry]
name = "iot_dashboard"
version = "0.1.0"
description = "IoT Dashboard"
authors = ["Retrocamara42"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Retrocamara42/iot_dashboard"

# This is the Python version your project supports
[tool.poetry.dependencies]
python = "^3.10"

Django
mysqlclient
djangorestframework
gunicorn
pytz
whitenoise
awsiotsdk
channels
channels-redis
uvicorn
websocket
