[tool.poetry]
name = "iot_dashboard"
version = "0.1.0"
description = "IoT Dashboard"
authors = ["Retrocamara42"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Retrocamara42/iot_dashboard"

# This is the Python version your project supports
[tool.poetry.dependencies]
python = "^3.10"

Django = "^3.2.9"
mysqlclient = "^2.1.0"
djangorestframework = "^3.12.4"
gunicorn = "^22.0.0"
pytz = "^2019.3"
whitenoise = "^5.3.0"
awsiotsdk = "^1.7.1"
channels = "^3.0.4"
channels-redis = "^4.2.0"
uvicorn = "^0.29.0"
websocket = "^0.2.1"
