[tool.poetry]
name = "iot_dashboard"
version = "0.1.0"
description = "IoT Dashboard"
authors = ["Retrocamara42"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Retrocamara42/iot_dashboard"

# This is the Python version your project supports
[tool.poetry.dependencies]
python = "^3.12"

Django = "^6.0"
mysqlclient = "^2.2.7"
djangorestframework = "^3.16.1"
djangorestframework-simplejwt = "^5.5.1"
gunicorn = "^23.0.0"
pytz = "^2025.2"
whitenoise = "^6.11.0"
awsiotsdk = "^1.27.0"
channels = "^4.3.2"
channels-redis = "^4.3.0"
uvicorn = "^0.40.0"
websocket = "^0.2.1"
